--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,5 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
+    - name: iOS Build Action
+      uses: yukiarrr/ios-build-action@v1.4.0
+
